Weird spacing bug with FB comments

--- a/proj1_spec/style.css
+++ b/proj1_spec/style.css
@@ -12,8 +12,7 @@ table {
 
 .fb-comments {
     width:100%;
-    padding-top:50px;
-    margin-top:150px;
+    padding-top:150px;
 }
 
 /*///////////  TABLE STUFF ///////////// */
